<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activitys.CadastroActivity"
    android:orientation="vertical"
    android:layout_gravity="center">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CrieSuaConta"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="10dp"/>


    <EditText
        android:id="@+id/campoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:background="@drawable/custom_editext"/>

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:background="@drawable/custom_editext"/>

    <EditText
        android:id="@+id/campoSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:background="@drawable/custom_editext"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_btn"
        android:text="@string/Cadastrar" />


</LinearLayout>